--- a/styling-react/src/App.css
+++ b/styling-react/src/App.css
@@ -2,6 +2,7 @@
   text-align: center;
 }
 
+/*.App 안에 들어있는 .logo*/
 .App-logo {
   height: 40vmin;
   pointer-events: none;
@@ -13,6 +14,7 @@
   }
 }
 
+/* .App 안에 들어있는 header */
 .App-header {
   background-color: #282c34;
   min-height: 100vh;
@@ -24,6 +26,7 @@
   color: white;
 }
 
+/* .App 안에 들어있는 link 태그 */
 .App-link {
   color: #61dafb;
 }
