--- a/styling-react/src/App.css
+++ b/styling-react/src/App.css
@@ -3,19 +3,19 @@
 }
 
 /*.App 안에 들어있는 .logo*/
-.App-logo {
+.App .logo {
   height: 40vmin;
   pointer-events: none;
 }
 
 @media (prefers-reduced-motion: no-preference) {
-  .App-logo {
+  .App .logo {
     animation: App-logo-spin infinite 20s linear;
   }
 }
 
 /* .App 안에 들어있는 header */
-.App-header {
+.App header {
   background-color: #282c34;
   min-height: 100vh;
   display: flex;
@@ -26,8 +26,8 @@
   color: white;
 }
 
-/* .App 안에 들어있는 link 태그 */
-.App-link {
+/* .App 안에 들어있는 a 태그 */
+.App a {
   color: #61dafb;
 }
 
