CSS Module 을 사용한 클래스이름을 두개 이상 적용 할 때

--- a/styling-react/src/CSSModule.module.css
+++ b/styling-react/src/CSSModule.module.css
@@ -7,8 +7,12 @@
     font-size: 2rem;
 }
 
-/* 글로벌 CSS 를 작성하고 싶다면 */
+.inverted {
+    color: black;
+    background: white;
+}
 
+/* 글로벌 CSS 를 작성하고 싶다면 */
 :global .something {
     font-weight: 800;
     color: aqua;
